club banner responsiveness

--- a/public/stylesheets/englishforAll/englishClubs/show.css
+++ b/public/stylesheets/englishforAll/englishClubs/show.css
@@ -57,7 +57,7 @@ body {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   overflow: hidden;
-  height: 40vh;
+  /* height: 40vh; */
   perspective: 100rem;
 }
 
