--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -293,7 +293,7 @@
             <div class="d-flex mb-2 my-card-wrapper justify-content-center flex-column">
               <div class="my-card">
                 <div class="img-wrapper m-2">
-                  <img class="program-image" src="https://news.sap.com/africa/files/2018/05/training.jpg"
+                  <img class="program-image" src="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828347/Screen_Shot_2023-03-26_at_10.56.26_lwxn4z.png"
                     alt="English at work" />
                 </div>
                 <div class="card-body d-flex flex-column align-items-start ms-3">
