--- a/views/programs/englishlang4all/englishClubs/board_members_dashboard.ejs
+++ b/views/programs/englishlang4all/englishClubs/board_members_dashboard.ejs
@@ -362,7 +362,7 @@
 
 <!-- Modal for club members list-->
 <div class="modal fade" id="club_members" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-dialog-scrollable modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Club Members List</h5>
