--- a/views/user/userprofile.ejs
+++ b/views/user/userprofile.ejs
@@ -1,54 +1,100 @@
 <% layout('layouts/boilerplate') %>
- <link href="/stylesheets/user/userprofile.css" rel="stylesheet" />
- <div class="container col-md-10 ">
-  <div class="row user-banner">
-   <div class="col-md-3">
-    <img src="<%= user.imageUrl %>" class="user-img img-thumbnail" alt="">
-   </div>
-   <div class="col-md-6">
-    <h1 class="welcome-msg py-3">
-     Salut
-     <%= user.username %> ! <span> <br> Bienvenue dans votre espace personnel d'apprentissage</span>
-    </h1>
-   </div>
-   <div class="col-md-3">
-   <a href="/reset-password" class="btn btn-outline-danger my-3">Reinitialiser mon mot de passe</a>
-   <% if (currentUser.role = "account-manager") {%>
-   <a href="/register" class="btn btn-outline-primary my-3">Creation de compte</a>
-    <% } %>
-   </div>
-  </div>
- </div>
-
- <p class="quote">« One language sets you in a corridor for life. Two languages open every door along the way » <br>
- <strong>—> Frank Smith – Ecrivain canadien</strong>  <br>
-  « Une langue vous place dans un couloir pour la vie. Deux langues vous ouvrent toutes les portes le long du chemin ».</p>
- <h2 class="my-program">Mes programmes</h2>
- <div class="row container mx-5 my-5">
-  <div class="col-md-4">
-   <% if (currentUser.isPecpStudent) {%>
-    <div class="program-wrapper">
-     <div class="program-img-wrapper">
-      <img src="https://cambridgeinstitute.co.in/wp-content/uploads/2021/03/english-img-22.jpg" class="img-fluid"
-       alt="">
-      <a class="btn my-3 ms-3 btn-outline-success"
-       href="/user/<%=currentUser._id%>/pecpStudentDashboard/<%=currentUser.pecpStudent_id%>">Personal
-       English
-       Coaching Program</a>
-      <%}%>
-     </div>
+  <link href="/stylesheets/user/userprofile.css" rel="stylesheet" />
+  <div class="container col-md-10 ">
+    <div class="row user-banner">
+      <div class="col-md-3">
+        <img src="<%= user.imageUrl %>" class="user-img img-thumbnail" alt="">
+      </div>
+      <div class="col-md-6">
+        <h1 class="welcome-msg py-3">
+          Salut
+          <%= user.username %> ! <span> <br> Bienvenue dans votre espace personnel d'apprentissage</span>
+        </h1>
+      </div>
+      <div class="col-md-3">
+        <a href="/reset-password" class="btn btn-outline-danger my-3">Reinitialiser mon mot de passe</a>
+        <% if (currentUser.role="account-manager" ) {%>
+          <a href="/register" class="btn btn-outline-primary my-3">Creation de compte</a>
+          <% } %>
+      </div>
     </div>
   </div>
- </div>
 
- <!-- Instructors -->
- <% if (currentUser.isPecpCoach) {%>
-  <h2 class="my-program">Pecp Coach Space</h2>
-  <div class="pecp-coach">
-   <div class="pecp-link-wrapper">
-    <a class="btn fs-4 btn-primary pecp-link"
-     href="/user/<%=currentUser._id%>/pecpCoachDashboard/<%=currentUser.pecpCoach_id%>">PECP
-     Coaching Dashboarb</a>
-    <%}%>
-   </div>
+  <p class="quote">« One language sets you in a corridor for life. Two languages open every door along the way » <br>
+    <strong>—> Frank Smith – Ecrivain canadien</strong> <br>
+    « Une langue vous place dans un couloir pour la vie. Deux langues vous ouvrent toutes les portes le long du chemin
+    ».
+  </p>
+  <h2 class="my-program">Mes programmes</h2>
+  <div class="row container mx-5 my-5">
+    <div class="col-md-6">
+      <% if (currentUser.isPecpStudent) {%>
+        <div class="program-wrapper">
+          <div class="program-img-wrapper">
+            <img src="https://cambridgeinstitute.co.in/wp-content/uploads/2021/03/english-img-22.jpg" class="img-fluid"
+              alt="">
+            <a class="btn my-3 ms-3 btn-outline-success"
+              href="/user/<%=currentUser._id%>/pecpStudentDashboard/<%=currentUser.pecpStudent_id%>">Personal
+              English
+              Coaching Program</a>
+            <%}%>
+          </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+      <% if (currentUser.isClubMember) {%>
+        <div class="program-wrapper">
+          <div class="program-img-wrapper">
+            <img
+              src="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828340/Screen_Shot_2023-03-26_at_10.56.54_hjlani.png"
+              class="img-fluid" alt="">
+            <p class="nep d-inline-block">Natural English for Professionals</p>
+            <!-- Button trigger modal -->
+            <button type="button my-clubs" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#mes-clubs">
+              Mes Clubs
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="mes-clubs" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Mes Clubs d'Anglais</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <% for(club of clubMember.memberEnglishClubs){%>
+                        <div class="col-md-4">
+                          <div class="img">
+                            <img src="<%= club.logoImageUrl %>" class="img-thumbnail img-fluid" alt="">
+                          </div>
+                          <a href="/englishlang4all/clubs/<%= club.city %>/hub/<%= club.hub %>/club/<%= club._id %>" class="club-name"><%= club.name %></a>
+                        </div>
+                        <%}%>
+                    </div>
+
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <%}%>
+          </div>
+        </div>
+    </div>
   </div>
+
+  <!-- Instructors -->
+  <% if (currentUser.isPecpCoach) {%>
+    <h2 class="my-program">Pecp Coach Space</h2>
+    <div class="pecp-coach">
+      <div class="pecp-link-wrapper">
+        <a class="btn fs-4 btn-primary pecp-link"
+          href="/user/<%=currentUser._id%>/pecpCoachDashboard/<%=currentUser.pecpCoach_id%>">PECP
+          Coaching Dashboarb</a>
+        <%}%>
+      </div>
+    </div>
