font size for mobile version

--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -201,7 +201,7 @@
     <div class="content">
       <div class="banner-heading">
         <h1 class="afrohk-title"><span class="afro-title">Afro Language Lab </h1>
-        <h3 class="slogan">Apprenez l'Anglais autrement</h3>
+        <h3 class="slogan">Apprenez l'Anglais Autrement</h3>
         <p style="text-align: start;"><a href="#apropos" class="more-btn">En Savoir Plus</a></p>
       </div>
     </div>
