--- a/public/stylesheets/landingpage.css
+++ b/public/stylesheets/landingpage.css
@@ -112,6 +112,9 @@ nav {
   font-family: "Roboto";
   font-family: Georgia, "Times New Roman", Times, serif;
 }
+.mobile-nav{
+  display: none;
+}
 
 .nav-display {
   opacity: 1;
@@ -2025,7 +2028,6 @@ font-size: 1.2rem;
   font-size: 1rem;
     }
 
- 
     
 }
 
@@ -2042,9 +2044,13 @@ font-size: 1.2rem;
   }
 }
 
-@media (max-width: 990px) {
+@media (max-width: 991px) {
   .header-text {
     font-size: 2.5rem;
+  }
+
+  .mobile-nav{
+    display: block;
   }
 
   .nav-link {
