--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -157,8 +157,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <ul class="navbar-nav ms-auto">
-        <!-- <a class="nav-link active" aria-current="page" href="/">Acceuil</a>
-                            -->
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#apropos"><span class="myNav-link">À
               Propos</span></a>
@@ -191,12 +189,12 @@
             <a class="nav-link-connexion me-2 my-2" href="/login">Connexion</a>
             <%} else { %>
               <h3 id="user" class="my-1 mx-2 align-self-center">
-                <a class="profile-link btn" href="/user/<%= currentUser._id%>">
+                <a class="profile-link btn desktop-nav" href="/user/<%= currentUser._id%>">
                   <i class="bi bi-person-circle"></i>
                   <%=currentUser.username%>
                 </a>
               </h3>
-              <a class="my-1 mx-2 btn btn-danger text-white" href="/logout">Deconnexion</a>
+              <a class="my-1 mx-2 align-items-center btn d-inline btn-danger text-white" href="/logout">Deconnexion</a>
               <%}%>
                 <%}%>
       </div>
