--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -34,10 +34,12 @@
 
 <body>
   <a class="top-link top-btn-display" href="#"><i class="bi bi-arrow-up-circle-fill"></i></a>
-  <!-- navbar -->
-  <nav class="navbar p-0 navbar-light navbar-expand-lg">
-    <!-- <div id="top-section" class="container-fluid"> -->
-    <a class="navbar-brand" id="brand-name" href="/">
+
+  <!-- New navbar -->
+
+  <div class="nav">
+    <input type="checkbox" id="nav-check">
+    <a class="" id="brand-name" href="/">
       <svg height="100%" width="100%" stroke-miterlimit="10"
         style="fill-rule:nonzero;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;" version="1.1"
         viewBox="0 0 1024 1024" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
@@ -131,76 +133,70 @@
           </g>
         </g>
       </svg>
-      <!-- <h1 class="brand">
-        <span class="text-dark">Afro </span>House of Knowledge
-      </h1> -->
-      <!-- <img src="https://i.ibb.co/nB7zHTr/afroHK.jpg" alt="afroHK" alt="" -->
-      <!-- class="logo-navbar img-fluid" /> -->
-      <!-- <img src="../images/logo_Afrohk.jpeg" alt="" width="50" height="50"> -->
-      <!-- <span class="afro ms-2">Afro</span><span class="hk">HK</span> -->
     </a>
     <% if(typeof currentUser !=undefined){%>
       <% if (!currentUser) {%>
         <a class="nav-link-connexion mobile-nav me-2 my-2" href="/login">Connexion</a>
         <%} else { %>
-          <h3 id="user" class="my-1 mx-2 mobile-nav align-self-center">
-            <a class="profile-link btn" href="/user/<%= currentUser._id%>">
+
+          <a class="mobile-nav" href="/user/<%= currentUser._id%>">
+            <i class="bi bi-person-circle"></i>
+            <%=currentUser.username%>
+          </a>
+          <%}%>
+            <%}%>
+    <div class="nav-btn">
+      <label for="nav-check">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+    </div>
+
+    <div class="nav-links">
+      <a class="nav-link active" aria-current="page" href="#apropos"><span class="myNav-link">À
+          Propos</span></a>
+
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        <span class="myNav-link"> Programmes </span>
+      </a>
+      <ul class="dropdown-menu mx-2" aria-labelledby="navbarDropdown">
+        <li>
+          <a class="dropdown-item" href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English for Professionals</a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="/pecp">Personal English Coaching Program</a>
+        </li>
+      </ul>
+
+      <a class="nav-link m-0" id="drop-down-contact" href="#footer"><span class="myNav-link">Contacts</span></a>
+      <% if(typeof currentUser !=undefined){%>
+        <% if (currentUser) {%>
+          <a class="btn  mobile-nav me-2 my-2" style="background-color:  rgb(138, 7, 36); color: white ;" href="/login">Deconnexion</a>
+          <%} %>
+
+              <%}%>
+    </div>
+
+    <div class="user me-5 py-3">
+      <% if(typeof currentUser !=undefined){%>
+        <% if (!currentUser) {%>
+          <a class="nav-link-connexion desktop-nav me-2 my-2" href="/login">Connexion</a>
+          <%} else { %>
+
+            <a class="profile-link btn desktop-nav" href="/user/<%= currentUser._id%>">
               <i class="bi bi-person-circle"></i>
               <%=currentUser.username%>
             </a>
-          </h3>
-    <%}%>
-    <%}%> 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#apropos"><span class="myNav-link">À
-              Propos</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#news-section"><span
-              class="myNav-link">Actualités</span></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            <span class="myNav-link"> Programmes </span>
-          </a>
-          <ul class="dropdown-menu mx-2" aria-labelledby="navbarDropdown">
-            <li>
-              <a class="dropdown-item" href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English for Professionals</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="/pecp">Personal English Coaching Program</a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link m-0" id="drop-down-contact" href="#footer"><span class="myNav-link">Contacts</span></a>
-        </li>
-      </ul>
-      <div class="navbar-nav ms-auto">
-        <% if(typeof currentUser !=undefined){%>
-          <% if (!currentUser) {%>
-            <a class="nav-link-connexion me-2 my-2" href="/login">Connexion</a>
-            <%} else { %>
-              <h3 id="user" class="my-1 mx-2 align-self-center">
-                <a class="profile-link btn desktop-nav" href="/user/<%= currentUser._id%>">
-                  <i class="bi bi-person-circle"></i>
-                  <%=currentUser.username%>
-                </a>
-              </h3>
-              <a class="my-1 mx-2 align-items-center btn d-inline btn-danger text-white" href="/logout">Deconnexion</a>
+
+            <a class="logout-link  desktop-nav btn" href="/logout">Deconnexion</a>
+            <%}%>
               <%}%>
-                <%}%>
-      </div>
     </div>
-    <!-- </div> -->
-  </nav>
+
+  </div>
+
   <!--End Navbar-->
 
   <!-- banner -->
@@ -286,7 +282,8 @@
                 <div class="card-body d-flex flex-column align-items-start ms-3">
                   <h3 class="program-name">Programme de Coaching Personalisé</h3>
                   <p class="program-description">
-                    Programme de coaching en Anglais, personalisé selon les besoins de l'apprenant. Il est axé sur l'apprentissage
+                    Programme de coaching en Anglais, personalisé selon les besoins de l'apprenant. Il est axé sur
+                    l'apprentissage
                     naturel et
                     se déroule en ligne et en présentiel.
                   </p>
@@ -303,7 +300,8 @@
             <div class="d-flex mb-2 my-card-wrapper justify-content-center flex-column">
               <div class="my-card">
                 <div class="img-wrapper m-2">
-                  <img class="program-image" src="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828347/Screen_Shot_2023-03-26_at_10.56.26_lwxn4z.png"
+                  <img class="program-image"
+                    src="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828347/Screen_Shot_2023-03-26_at_10.56.26_lwxn4z.png"
                     alt="English at work" />
                 </div>
                 <div class="card-body d-flex flex-column align-items-start ms-3">
@@ -313,7 +311,7 @@
                     d'entreprise dans des clubs.
                   </p>
                   <!-- <a href="/englishlang4all/clubs/home" class="course-btn"> En Savoir Plus </a> -->
-                  
+
                   <a href="/englishlang4all/clubs/Burkina-Faso/hubs" class="course-btn">En Savoir Plus</a>
                 </div>
               </div>
@@ -510,6 +508,7 @@
       <div class="swiper-pagination py-2"></div>
     </div>
   </main>
+  
   <%-include('./partials/footer')%>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
